Libdigidocpp library 3.11.0 release notes
--------------------------------------
Changes compared to ver 3.10.3
- Improve EC signature size calculation



Libdigidocpp library 3.10.3 release notes
--------------------------------------
Changes compared to ver 3.10.0
- Updated experimental .NET C# wrapper swig configuration file to recent API
- Included C# wrapper files in Windows installer package
- Filter out CA certificates in PKCS11Signer implementation to support Finland id-card signing in digidoc-tool
- On signature validation at least one DataFile should be signed
- Disable OCSP time slot check – local computer time against OCSP server time



Libdigidocpp library 3.10.0 release notes
--------------------------------------
Changes compared to ver 3.9

- Changed the default BDOC signature profile to BDOC-TS (ASiC-E LT signature with time-stamp) for new signatures. To create a BDOC-TM (LT_TM, i.e. time-mark) signature, specify the "time-mark" profile value in Container::sign(Signer *signer, const string &profile) method call.
- Fixed time zone usage when validating signer certificate validity period's starting time. Previously, "Not yet valid" error message was displayed even if the certificate was actually already valid.
- Improved BDOC signatures*.xml file's XML structure validation. Transforms XML element is now allowed to enhance interoperability.
- Improved TSL functionality
	- In case of BDOC format, checking the trustworthiness of trust services (CA, OCSP, time-stamping services) is now possible only by using TSL lists. Previously used certificate store functionality is no longer supported.
	- Removed country-specific filtering of the national TSLs that are referenced in the European Commission's central TSL list.
	- Added possibility to use multiple parallel European Commission's TSL signing certificates to enable transition to a new certificate, if needed.